--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
             <label>Current Plan Price:</label>
             <input type="number" id="currentPlanPrice" required>
             
-            <label>New Plan Price:</label>
-            <input type="number" id="newPlanPrice" required>
+            
+            <label>New Plan Start Date:</label>
+            <input type="date" id="newPlanStartDate" required>
             
             <button type="button" onclick="storeData()">Next</button>
             <button type="button" onclick="finishAndCalculate()">Finish & Calculate</button>
