--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #444f5a;
+            background-color: #1e3a5f;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -153,6 +153,10 @@
                 </tr>
             </thead>
             <tbody></tbody>
+                    <tr>
+                <td colspan="2" style="text-align: right; font-weight: bold;">Total Upgrade Cost:</td>
+                <td id="totalUpgradeCost">$0.00</td>
+            </tr>
         </table>
     </div>
     
