--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="/mnt/data/logo.png" alt="Company Logo" class="logo">
+        <img src="logo.png" alt="Company Logo" class="logo">
         <h2>EV Ready Cloud Token Upgrade Calculator</h2>
         <div class="progress">
             <div class="progress-bar" id="progressBar"></div>
