--- a/index.html
+++ b/index.html
@@ -143,26 +143,15 @@
 
         function storeData() {
             addCurrentEntry();
+            document.getElementById('calculatorForm').reset();
         }
 
         function addCurrentEntry() {
             const stationName = document.getElementById('stationName').value;
             const stationSN = document.getElementById('stationSN').value;
-            if (!stationName || !stationSN) {
-                alert("Please fill out all required fields.");
-                return;
-            }
-            
-            const finalUpgradeCost = calculateUpgradeCost(
-                parseFloat(document.getElementById('currentPlanPrice').value),
-                parseFloat(document.getElementById('newPlanPrice').value),
-                new Date(document.getElementById('currentPlanStartDate').value),
-                new Date(document.getElementById('currentPlanExpirationDate').value),
-                new Date(document.getElementById('newPlanStartDate').value)
-            );
-            storedData.push({ stationName, stationSN, finalUpgradeCost });
+            const finalUpgradeCost = parseFloat(document.getElementById('newPlanPrice').value) - parseFloat(document.getElementById('currentPlanPrice').value);
+            storedData.push({ stationName, stationSN, finalUpgradeCost: finalUpgradeCost.toFixed(2) });
             updateTable();
-            document.getElementById('calculatorForm').reset();
         }
 
         function updateTable() {
@@ -176,6 +165,25 @@
                 tableBody.appendChild(tr);
             });
             document.getElementById('totalUpgradeCost').innerText = `$${totalCost.toFixed(2)}`;
+        }
+        
+        function finishAndCalculate() {
+            if (storedData.length === 0) {
+                alert('No data stored. Please add at least one station.');
+                return;
+            }
+            let csvContent = "Station Name,Station S/N,Final Upgrade Cost\n";
+            storedData.forEach(row => {
+                csvContent += `${row.stationName},${row.stationSN},${row.finalUpgradeCost}\n`;
+            });
+            const blob = new Blob([csvContent], { type: 'text/csv' });
+            const link = document.createElement('a');
+            link.href = URL.createObjectURL(blob);
+            link.download = 'calculated_results.csv';
+            link.click();
+            storedData = [];
+            updateTable();
+            alert('Export complete. Data cleared.');
         }
     </script>
 </body>
