--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>EV Ready Cloud Token Upgrade Calculator</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -10,7 +12,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
             margin: 0;
             color: white;
             padding: 20px;
@@ -23,7 +25,6 @@
             max-width: 500px;
             width: 100%;
             text-align: center;
-            transition: all 0.3s ease-in-out;
             color: black;
         }
         .logo {
@@ -38,7 +39,6 @@
             margin-top: 10px;
             font-weight: bold;
             text-align: left;
-            position: relative;
         }
         input {
             width: calc(100% - 20px);
@@ -49,7 +49,6 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            transition: all 0.2s ease-in-out;
         }
         button {
             background-color: #1e3a5f;
@@ -60,26 +59,6 @@
             cursor: pointer;
             margin-top: 10px;
             width: 100%;
-            transition: all 0.3s ease-in-out;
-        }
-        .progress {
-            width: 100%;
-            background: #ddd;
-            border-radius: 5px;
-            margin-top: 10px;
-        }
-        .progress-bar {
-            height: 10px;
-            background: #1e3a5f;
-            width: 0%;
-            border-radius: 5px;
-            transition: width 0.4s ease-in-out;
-        }
-        .success-message {
-            display: none;
-            margin-top: 10px;
-            color: green;
-            font-weight: bold;
         }
         table {
             width: 100%;
@@ -99,9 +78,6 @@
     <div class="container">
         <img src="logo.png" alt="Company Logo" class="logo">
         <h2>EV Ready Cloud Token Upgrade Calculator</h2>
-        <div class="progress">
-            <div class="progress-bar" id="progressBar"></div>
-        </div>
         <form id="calculatorForm">
             <label>Station Name:</label>
             <input type="text" id="stationName" required>
@@ -160,7 +136,8 @@
             updateTable();
             document.getElementById('calculatorForm').reset();
         }
-            function updateTable() {
+        
+        function updateTable() {
             let totalCost = 0;
             const tableBody = document.querySelector('#storedDataTable tbody');
             tableBody.innerHTML = '';
@@ -172,16 +149,15 @@
             });
             document.getElementById('totalUpgradeCost').innerText = `$${totalCost.toFixed(2)}`;
         }
-            function finishAndCalculate() {
+
+        function finishAndCalculate() {
             if (storedData.length === 0) {
                 alert('No data stored. Please add at least one station.');
                 return;
             }
-            let csvContent = "Station Name,Station S/N,Final Upgrade Cost
-";
+            let csvContent = "Station Name,Station S/N,Final Upgrade Cost\n";
             storedData.forEach(row => {
-                csvContent += `${row.stationName},${row.stationSN},${row.finalUpgradeCost}
-`;
+                csvContent += `${row.stationName},${row.stationSN},${row.finalUpgradeCost}\n`;
             });
             const blob = new Blob([csvContent], { type: 'text/csv' });
             const link = document.createElement('a');
